updated CSS topic of course classes

--- a/02-CSS/clase33-Medidas/3-rem/style.css
+++ b/02-CSS/clase33-Medidas/3-rem/style.css
@@ -3,8 +3,9 @@
   margin: 0;
   padding: 0;
 }
+/* esta cuenta hace que 1rem=10px */
 html {
-  font-size: 62.5%;
+  font-size: 62.5%;  
 }
 p {
   font-size: 1.6rem;
