--- a/02-CSS/clase22-CSS/style.css
+++ b/02-CSS/clase22-CSS/style.css
@@ -4,12 +4,12 @@ p {
   font-size: 40px;
 }
 
-/* class */
+/* selector by class */
 .parrafo {
   color: red;
 }
 
-/* ID */
+/* selector by ID */
 #texto {
   color: yellow;
   font-size: 24px;
